--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,57 +11,68 @@
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="167dp"
         android:text="@string/my_counter"
         android:textColor="#0C0C0C"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/qty"
+        app:layout_constraintBottom_toTopOf="@+id/deqbtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.208"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24" />
+        app:layout_constraintVertical_bias="0.505" />
 
     <Button
-        android:id="@+id/Inqbtn"
+        android:id="@+id/inqbtn"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="543dp"
+        android:onClick="inqty"
         android:text="@string/Ingbtn"
-        android:onClick="Inqty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/deqbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/qty" />
 
     <Button
         android:id="@+id/deqbtn"
         android:layout_width="150dp"
         android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="543dp"
         android:onClick="deqty"
         android:text="@string/degbtn"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/qty"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.196" />
 
     <TextView
         android:id="@+id/qty"
-        android:layout_width="18dp"
+        android:layout_width="25dp"
         android:layout_height="31dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="20dp"
         android:text="@string/_0"
         android:textColor="#0B0B0B"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/Inqbtn"
+        app:layout_constraintBottom_toBottomOf="@+id/inqbtn"
+        app:layout_constraintEnd_toStartOf="@+id/inqbtn"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/deqbtn"
-        app:layout_constraintEnd_toStartOf="@+id/Inqbtn"
-        app:layout_constraintTop_toTopOf="@+id/Inqbtn" />
+        app:layout_constraintTop_toTopOf="@+id/inqbtn" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/send_back"
+        android:textStyle="bold"
+        android:onClick="SendBack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inqbtn"
+        app:layout_constraintVertical_bias="0.112" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
